--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -7,15 +7,20 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+    
       - name: checkout
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false 
-
-      - name: install and build
-        run: |
-          npm install
-          npm run-script build
+          
+      - name: install
+        run: npm install
+        
+      - name: test
+        run: npm run-script test
+          
+      - name: build
+        run: npm run-script build
 
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.0.0
