Add maskable icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,12 @@
         "src": "assets/android-chrome-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
+    },
+    {
+      "src": "assets/maskable_icon_x192.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
