fix typo in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,5 +23,5 @@
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "orientation":  "portait"
+  "orientation":  "portrait"
 }
